# flowdesk

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/core/: authorization.py  config.py  db.py  dependencies.py  exceptions.py  health.py  logging.py  mail.py  metrics.py  middleware.py  permissions.py  project_key.py  rate_limit.py  redis_client.py  schemas.py  security.py  slug.py  storage.py  validators.py
backend/src/db/: base.py  models_registry.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 05383634b2af_create_sessions_and_refresh_tokens.py  0aa72aead06a_create_project_activity_logs.py  3113f34f2a20_create_comment_mentions.py  3bce4084eea4_create_issue_labels.py  4c26f268e742_create_teams.py  56d54b9ad393_add_description_to_workspaces.py  58110c777134_create_attachments.py  5b0379d95061_create_projects.py  74d9c63228bc_create_activity_logs.py  86dc5d2ef0c8_create_workspaces.py  8e0f2eb0ad76_create_labels.py  (+13 more)
backend/src/features/: README.md
backend/src/features/attachments/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/features/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/features/comments/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/features/issues/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/features/labels/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/features/notifications/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/features/projects/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/features/teams/: models.py  repository.py
backend/src/features/users/: dependencies.py  router.py  schemas.py  service.py
backend/src/features/workspaces/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/contract/: conftest.py  test_attachments.py  test_auth.py  test_authorization.py  test_comments.py  test_issues.py  test_labels.py  test_notifications.py  test_password_reset.py  test_projects.py  test_system.py  test_users.py  test_workspaces.py
backend/tests/integration/: conftest.py  test_auth_sessions.py  test_comments_and_activity.py  test_issues.py  test_labels.py  test_notifications_and_attachments.py  test_projects.py  test_rate_limit.py  test_s3_storage_provider.py  test_smtp_mail_sender.py  test_teams.py  test_users.py  test_workspaces.py
backend/tests/unit/: conftest.py
backend/tests/unit/core/: test_authorization.py  test_config.py
(+317 files in other folders)
