[tool.poetry]
name = "flowdesk-api"
version = "0.1.0"
description = "FlowDesk API — backend FastAPI"
authors = ["FlowDesk"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.6"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.13"
structlog = "^24.4"
uuid6 = "^2024.7.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
mypy = "^1.13"
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "ASYNC"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
